--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   device_preview: ^0.7.3
   auto_size_text: ^3.0.0-nullsafety.0
   sprintf: ^6.0.0
+  retrofit: ^2.0.0
+  flutter_fortune_wheel: ^1.0.1
+  audioplayers: ^0.19.0
+  flutter_countdown_timer: ^4.1.0
+  assets_audio_player: ^3.0.3+3
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +50,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/
+    - assets/sounds/
   fonts:
     - family: Exo2Regular
       fonts:
