--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   audioplayers: ^0.19.0
   flutter_countdown_timer: ^4.1.0
   assets_audio_player: ^3.0.3+3
+  animator: ^3.1.0
 
 dev_dependencies:
   flutter_test:
