--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   assets_audio_player: ^3.0.3+3
   animator: ^3.1.0
+  flutter_animation_set: ^0.0.4
 
 dev_dependencies:
   flutter_test:
