--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   assets_audio_player: ^3.0.3+3
   animator: ^3.1.0
   flutter_animation_set: ^0.0.4
+  lottie: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ flutter:
   assets:
     - assets/images/
     - assets/sounds/
+    - assets/lottie/
   fonts:
     - family: Exo2Regular
       fonts:
