--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   device_info: ^2.0.2
 
 dev_dependencies:
+  build_runner: ^2.0.6
+  json_serializable: ^4.1.3
   flutter_test:
     sdk: flutter
 
