--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_animation_set: ^0.0.4
   lottie: ^1.0.1
   device_info: ^2.0.2
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   build_runner: ^2.0.6
