--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.0.6
+  retrofit_generator: any
   json_serializable: ^4.1.3
   flutter_test:
     sdk: flutter
