--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   lottie: ^1.0.1
   device_info: ^2.0.2
   shared_preferences: ^2.0.6
+  encrypt: ^5.0.0
+  intl: ^0.17.0
+  logger: ^1.0.0
 
 dev_dependencies:
   build_runner: ^2.0.6
